--- a/src/mainboard/google/oak/Kconfig
+++ b/src/mainboard/google/oak/Kconfig
@@ -36,6 +36,7 @@ config BOARD_SPECIFIC_OPTIONS
 config CHROMEOS
 	select CHROMEOS_VBNV_FLASH
 	select EC_SOFTWARE_SYNC
+	select VBOOT_OPROM_MATTERS
 	select VIRTUAL_DEV_SWITCH
 
 config MAINBOARD_DIR
