--- a/src/soc/nvidia/tegra210/Kconfig
+++ b/src/soc/nvidia/tegra210/Kconfig
@@ -19,6 +19,7 @@ if SOC_NVIDIA_TEGRA210
 
 config CHROMEOS
 	select CHROMEOS_RAMOOPS_NON_ACPI
+	select VBOOT_OPROM_MATTERS
 
 config MAINBOARD_DO_DSI_INIT
 	bool "Use dsi graphics interface"
