--- a/src/soc/rockchip/rk3288/Kconfig
+++ b/src/soc/rockchip/rk3288/Kconfig
@@ -32,6 +32,7 @@ config SOC_ROCKCHIP_RK3288
 if SOC_ROCKCHIP_RK3288
 
 config CHROMEOS
+	select VBOOT_OPROM_MATTERS
 	select VBOOT_STARTS_IN_BOOTBLOCK
 	select SEPARATE_VERSTAGE
 	select RETURN_FROM_VERSTAGE
