--- a/src/soc/rockchip/rk3399/Kconfig
+++ b/src/soc/rockchip/rk3399/Kconfig
@@ -19,6 +19,7 @@ if SOC_ROCKCHIP_RK3399
 config CHROMEOS
 	select RETURN_FROM_VERSTAGE
 	select SEPARATE_VERSTAGE
+	select VBOOT_OPROM_MATTERS
 	select VBOOT_STARTS_IN_BOOTBLOCK
 
 config PMIC_BUS
