--- a/src/vendorcode/google/chromeos/Kconfig
+++ b/src/vendorcode/google/chromeos/Kconfig
@@ -111,11 +111,16 @@ config VBOOT_EC_SLOW_UPDATE
 	  screen that informs the user the update is happening.
 
 config VBOOT_OPROM_MATTERS
-	bool "Video option ROM matters"
+	bool "Video option ROM matters (= can skip display init)"
 	default n
 	depends on VBOOT_VERIFY_FIRMWARE
 	help
-	  Whether the video option ROM has run matters on this platform.
+	  Set this option to indicate to vboot that this platform will skip its
+	  display initialization on a normal (non-recovery, non-developer) boot.
+	  Vboot calls this "oprom matters" because on x86 devices this
+	  traditionally meant that the video option ROM will not be loaded, but
+	  it works functionally the same for other platforms that can skip their
+	  native display initialization code instead.
 
 config VIRTUAL_DEV_SWITCH
 	bool "Virtual developer switch support"
