--- a/src/drivers/i2c/tpm/Kconfig
+++ b/src/drivers/i2c/tpm/Kconfig
@@ -1,6 +1,6 @@
 config I2C_TPM
 	bool "I2C TPM"
-	depends on !PC80_SYSTEM # for now
+	depends on TPM || TPM2
 
 config DRIVER_TPM_I2C_BUS
 	hex "I2C TPM chip bus"
