--- a/src/vendorcode/google/chromeos/Kconfig
+++ b/src/vendorcode/google/chromeos/Kconfig
@@ -21,7 +21,8 @@ menu "ChromeOS"
 config CHROMEOS
 	bool "Build for ChromeOS"
 	default n
-	select TPM
+	select TPM if !MAINBOARD_HAS_TPM2
+	select TPM2 if MAINBOARD_HAS_TPM2
 	select TPM_INIT_FAILURE_IS_FATAL if PC80_SYSTEM && LPC_TPM
 	select SKIP_TPM_STARTUP_ON_NORMAL_BOOT if PC80_SYSTEM && LPC_TPM
 	select BOOTMODE_STRAPS
