--- a/src/soc/rockchip/rk3399/Makefile.inc
+++ b/src/soc/rockchip/rk3399/Makefile.inc
@@ -49,6 +49,7 @@ romstage-y += romstage.c
 romstage-y += tsadc.c
 romstage-y += usb.c
 romstage-y += gpio.c
+romstage-y += saradc.c
 romstage-y += ../common/gpio.c
 
 ################################################################################
