flashmap: Use CONFIG_ROM_SIZE as flash size in flashmap
Currently there are two sources for the final size of the
flash image. One is defined as a Kconfig variable
(ROM_SIZE) and the other can be provided in a user defined
flashmap.fmd. This patch will enable the usage of CONFIG_ROM_SIZE
in flashmap.fmd to define the flash size. In this way, the
Kconfig variable is the only source of information for the
flash image size. This way is optional.

Change-Id: Id5298e06d360aaa6d94f2b5a2ffa65e45919853e
Signed-off-by: Werner Zeh <werner.zeh@siemens.com>
Reviewed-on: https://review.coreboot.org/15219
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -700,7 +700,8 @@ $(obj)/fmap.fmd: $(top)/Makefile.inc $(DEFAULT_FLASHMAP) $(obj)/config.h
 	mv $@.tmp $@
 else # ifeq ($(CONFIG_FMDFILE),)
 $(obj)/fmap.fmd: $(CONFIG_FMDFILE) $(obj)/config.h
-	cp $< $@
+	$(HOSTCC) $(PREPROCESS_ONLY) -include $(obj)/config.h $< -o $@.pre
+	mv $@.pre $@
 endif # ifeq ($(CONFIG_FMDFILE),)
 
 # generated at the same time as fmap.fmap
