cbfstool: Change CONFIG_FMD_GENPARSER if not set to n
When doing make in util/cbfstool it contaminates the tree because it generates
the fmd_parser.

Change-Id: Ida855d1e57560c76d3fcfcc8e2f7f75bcdfdd5d4
Signed-off-by: Alexander Couzens <lynxis@fe80.eu>
Reviewed-on: https://review.coreboot.org/15221
Tested-by: build bot (Jenkins)
Reviewed-by: Nico Huber <nico.h@gmx.de>

--- a/util/cbfstool/Makefile
+++ b/util/cbfstool/Makefile
@@ -1,7 +1,7 @@
 top ?= $(abspath ../..)
 objutil ?= $(top)/util
 
-CONFIG_FMD_GENPARSER := y
+CONFIG_FMD_GENPARSER ?= n
 
 HOSTCC ?= $(CC)
 OBJCOPY ?= objcopy
