--- a/src/drivers/spi/tpm/Kconfig
+++ b/src/drivers/spi/tpm/Kconfig
@@ -6,3 +6,8 @@ config DRIVER_TPM_SPI_BUS
 	hex "SPI bus TPM chip is connected to"
 	default 0
 	depends on SPI_TPM
+
+config DRIVER_TPM_SPI_CHIP
+	int "Chip Select of the TPM chip on its SPI bus"
+	default 0
+	depends on SPI_TPM
